--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
-    image: ${DOCKER_USERNAME}/fastapi-app:latest
+    image: kalyani2508/fastapi-app:latest   # <-- use your Docker Hub username
     container_name: fastapi-app
     ports:
-      - "80:8000"  # public port 80 -> container 8000
+      - "80:8000"
     restart: unless-stopped
