--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,55 +1,85 @@
 name: Deploy to Production
- ​
- on:
-   push:
-     branches: [ main ]
-   workflow_dispatch:
- ​
- jobs:
-   deploy:
-     runs-on: ubuntu-latest
-     
-     steps:
-     - name: Checkout code
-       uses: actions/checkout@v3
-     
-     - name: Configure AWS credentials
-       uses: aws-actions/configure-aws-credentials@v2
-       with:
-         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         aws-region: us-east-1
-     
-     - name: Deploy to EC2
-       env:
-         PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-         HOST: ${{ secrets.EC2_HOST }}
-         USER: ubuntu
-       run: |
-         echo "$PRIVATE_KEY" > private_key.pem
-         chmod 600 private_key.pem
-         
-         ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} << 'EOF'
-           cd /home/ubuntu/app
-           git pull origin main
-           docker-compose down
-           docker-compose pull
-           docker-compose up -d
-           docker system prune -af
-         EOF
-         
-         rm -f private_key.pem
-     
-     - name: Verify deployment
-       run: |
-         sleep 10
-         curl -f http://${{ secrets.EC2_HOST }}/health || exit 1
-     
-     - name: Notify deployment
-       if: always()
-       run: |
-         if [ ${{ job.status }} == 'success' ]; then
-           echo "✅ Deployment successful!"
-         else
-           echo "❌ Deployment failed!"
-         fi
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Deploy to EC2
+        env:
+          PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          HOST: ${{ secrets.EC2_HOST }}
+          USER: ubuntu
+        run: |
+          set -euo pipefail
+          echo "$PRIVATE_KEY" > private_key.pem
+          chmod 600 private_key.pem
+
+          ssh -o StrictHostKeyChecking=no -i private_key.pem "${USER}@${HOST}" << 'EOF'
+            set -euo pipefail
+
+            cd /home/ubuntu/app || { echo "app directory missing"; exit 1; }
+            git pull origin main
+
+            # Use Compose v2 if present, else fall back to v1
+            if docker compose version >/dev/null 2>&1; then
+              DC="docker compose"
+            else
+              DC="docker-compose"
+            fi
+
+            # Non-interactive, idempotent deploy
+            $DC down --remove-orphans || true
+            $DC pull || true
+            $DC up -d --force-recreate --remove-orphans
+
+            # Give the container a moment to come up, then local health check
+            for i in {1..20}; do
+              if curl -fsS http://localhost/health >/dev/null; then
+                echo "Local health check OK"
+                exit 0
+              fi
+              sleep 2
+            done
+            echo "Local health check FAILED"
+            exit 1
+          EOF
+
+          rm -f private_key.pem
+
+      - name: Verify deployment (public endpoint)
+        run: |
+          set -e
+          for i in {1..30}; do
+            if curl -fsS "http://${{ secrets.EC2_HOST }}/health" >/dev/null; then
+              echo "✅ Deployment verified"
+              exit 0
+            fi
+            echo "…waiting for public /health ($i/30)"
+            sleep 2
+          done
+          echo "❌ Public health check failed"
+          exit 1
+
+      - name: Notify deployment
+        if: always()
+        run: |
+          if [ "${{ job.status }}" = "success" ]; then
+            echo "✅ Deployment successful!"
+          else
+            echo "❌ Deployment failed!"
+          fi
