--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,85 +1,63 @@
-name: Deploy to Production
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+- name: Deploy to EC2 via SSH (Compose v2, non-interactive)
+  env:
+    HOST: ${{ secrets.EC2_HOST }}
+    USER: ubuntu
+    PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+    REPO: ${{ github.repository }}
+    DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+    DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  run: |
+    set -euo pipefail
+    echo "$PRIVATE_KEY" > private_key.pem
+    chmod 600 private_key.pem
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+    ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} << 'EOF'
+      set -euxo pipefail
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # 1) Ensure Docker running
+      if ! command -v docker >/dev/null 2>&1; then
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo systemctl enable --now docker
+      fi
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      # 2) Ensure Compose v2 (use sudo for all docker calls)
+      if ! sudo docker compose version >/dev/null 2>&1; then
+        echo "Installing Docker Compose v2…"
+        sudo apt-get update || true
+        if sudo apt-get install -y docker-compose-plugin; then
+          :
+        else
+          COMPOSE_VERSION="v2.29.7"
+          sudo mkdir -p /usr/local/lib/docker/cli-plugins
+          sudo curl -fsSL \
+            "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-linux-x86_64" \
+            -o /usr/local/lib/docker/cli-plugins/docker-compose
+          sudo chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
+        fi
+      fi
 
-      - name: Deploy to EC2
-        env:
-          PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          HOST: ${{ secrets.EC2_HOST }}
-          USER: ubuntu
-        run: |
-          set -euo pipefail
-          echo "$PRIVATE_KEY" > private_key.pem
-          chmod 600 private_key.pem
+      # 3) Get/Update repo
+      cd /home/ubuntu
+      if [ ! -d app/.git ]; then
+        git clone https://github.com/${REPO}.git app
+      fi
+      cd app
+      git pull origin main
 
-          ssh -o StrictHostKeyChecking=no -i private_key.pem "${USER}@${HOST}" << 'EOF'
-            set -euo pipefail
+      # 4) Login to Docker Hub if secrets are set (optional)
+      if [ -n "${DOCKER_USERNAME:-}" ] && [ -n "${DOCKER_PASSWORD:-}" ]; then
+        echo "${DOCKER_PASSWORD}" | sudo docker login -u "${DOCKER_USERNAME}" --password-stdin || true
+      fi
 
-            cd /home/ubuntu/app || { echo "app directory missing"; exit 1; }
-            git pull origin main
+      # 5) Compose deploy (all with sudo)
+      sudo docker compose down --remove-orphans || true
+      sudo docker compose pull || true
+      sudo docker compose up -d --force-recreate --remove-orphans
+      sudo docker system prune -af || true
 
-            # Use Compose v2 if present, else fall back to v1
-            if docker compose version >/dev/null 2>&1; then
-              DC="docker compose"
-            else
-              DC="docker-compose"
-            fi
+      # 6) Health check
+      curl -fsS http://localhost/health
+    EOF
 
-            # Non-interactive, idempotent deploy
-            $DC down --remove-orphans || true
-            $DC pull || true
-            $DC up -d --force-recreate --remove-orphans
-
-            # Give the container a moment to come up, then local health check
-            for i in {1..20}; do
-              if curl -fsS http://localhost/health >/dev/null; then
-                echo "Local health check OK"
-                exit 0
-              fi
-              sleep 2
-            done
-            echo "Local health check FAILED"
-            exit 1
-          EOF
-
-          rm -f private_key.pem
-
-      - name: Verify deployment (public endpoint)
-        run: |
-          set -e
-          for i in {1..30}; do
-            if curl -fsS "http://${{ secrets.EC2_HOST }}/health" >/dev/null; then
-              echo "✅ Deployment verified"
-              exit 0
-            fi
-            echo "…waiting for public /health ($i/30)"
-            sleep 2
-          done
-          echo "❌ Public health check failed"
-          exit 1
-
-      - name: Notify deployment
-        if: always()
-        run: |
-          if [ "${{ job.status }}" = "success" ]; then
-            echo "✅ Deployment successful!"
-          else
-            echo "❌ Deployment failed!"
-          fi
+    rm -f private_key.pem
