--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,3 @@
-name: Deploy to Production
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
       - name: Deploy to EC2 via SSH (Compose v2, non-interactive)
         env:
           HOST: ${{ secrets.EC2_HOST }}
@@ -33,7 +11,6 @@ jobs:
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
 
-          # NOTE: unquoted EOF so ${REPO} expands here on the runner
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER}@${HOST} << EOF
             set -euxo pipefail
 
@@ -51,10 +28,10 @@ jobs:
               if sudo apt-get install -y docker-compose-plugin; then
                 :
               else
-                COMPOSE_VERSION="v2.29.7"
+                # Hard-code version to avoid runner-side expansion issues
                 sudo mkdir -p /usr/local/lib/docker/cli-plugins
                 sudo curl -fsSL \
-                  "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-linux-x86_64" \
+                  "https://github.com/docker/compose/releases/download/v2.29.7/docker-compose-linux-x86_64" \
                   -o /usr/local/lib/docker/cli-plugins/docker-compose
                 sudo chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
               fi
@@ -68,24 +45,24 @@ jobs:
             cd app
             git pull origin main
 
-            # 4) Optional: login if your Docker Hub repo is private
+            # 4) Optional Docker Hub login (private repos)
             if [ -n "${DOCKER_USERNAME}" ] && [ -n "${DOCKER_PASSWORD}" ]; then
               echo "${DOCKER_PASSWORD}" | sudo docker login -u "${DOCKER_USERNAME}" --password-stdin || true
             fi
 
-            # 5) Compose deploy (all with sudo)
+            # 5) Deploy
             sudo docker compose down --remove-orphans || true
             sudo docker compose pull || true
             sudo docker compose up -d --force-recreate --remove-orphans
             sudo docker system prune -af || true
 
-            # 6) Local health probe (allow warmup)
+            # 6) Local health check
             for i in {1..30}; do
               if curl -fsS http://localhost/health >/dev/null; then
                 echo "Local health OK"
                 exit 0
               fi
-              echo "…waiting for app ($i/30)"
+              echo "…waiting for app (\$i/30)"
               sleep 2
             done
             echo "Local health check failed"
@@ -93,17 +70,3 @@ jobs:
           EOF
 
           rm -f private_key.pem
-
-      - name: Verify deployment from runner (public)
-        run: |
-          set -e
-          for i in {1..30}; do
-            if curl -fsS "http://${{ secrets.EC2_HOST }}/health" >/dev/null; then
-              echo "✅ Public health OK"
-              exit 0
-            fi
-            echo "…waiting for public /health ($i/30)"
-            sleep 2
-          done
-          echo "❌ Public health check failed"
-          exit 1
